--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
     {% block extra_css %}{% endblock %}
   </head>
 
-  <body class="bg-grey-bg text-blue-dark font-sans flex flex-col min-h-screen">
+  <body class="bg-grey-bg text-blue-dark font-sans flex flex-col">
     <header class="sticky top-0 z-50 bg-blue-dark py-4 px-6 lg:px-20 shadow-md">
       <div class="flex justify-between items-center max-w-[1200px] mx-auto">
         <a
@@ -99,6 +99,8 @@
     <main class="flex-grow px-6 lg:px-20 py-10 max-w-[1200px] w-full mx-auto">
       {% block content %} {% endblock %}
     </main>
+
+    
 
     <footer class="bg-blue-dark text-white pt-16 pb-8 px-6 lg:px-20 mt-auto">
       <div
